name:                acme-lolcat
version:             0.1
homepage:            https://github.com/llelf/acme-lolcat
synopsis:            LOLCAT
description:
        LOL
license:             BSD3
license-file:        LICENSE
author:              Anton Nikishaev <me@lelf.lu>
maintainer:          Anton Nikishaev <me@lelf.lu>
copyright:           2013 Anton Nikishaev
category:            Acme
build-type:          Simple
cabal-version:       >=1.18
extra-source-files:  README
tested-with:         GHC==7.6.3, GHC==7.7.20131029

library
  exposed-modules:     Acme.LOLCAT, Acme.LOLCAT.IO
  build-depends:       
        base >= 4.5 && < 5, parsec >= 1.3.1, text >= 0.11.3.1,
        random >= 1.0.1.1, random-shuffle >= 0.0.4
  default-language:    Haskell2010
--  ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/llelf/acme-lolcat

source-repository head
  type:     darcs
  location: http://hub.darcs.net/lelf/acme-lolcat


